--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -5,7 +5,9 @@ server.port = 8888
 #spring.cloud.config.server.git.uri=/home/shivani/Desktop/SpringCloud-ConfigServer
 #spring.cloud.config.server.git.uri=https://github.com/shivanikanojia/My-Config-Server-Demo
  
+ spring.cloud.config.server.git.uri=https://github.com/shivanikanojia/Config-Server/tree/master/src/main/resources/configs
 #Disable security of the Management endpoint
 management.security.enabled=false
 
-spring.cloud.config.server.native.search-locations=classpath:/configs
+#spring.cloud.config.server.native.search-locations=classpath:/configs
+spring.cloud.config.server.bootstrap=true
