try with properties in classpath

--- a/src/main/resources/configs/SpringCloud-ConfigServer-development.properties
+++ b/src/main/resources/configs/SpringCloud-ConfigServer-development.properties
@@ -5,6 +5,7 @@ eureka.instance.metadataMap.instanceId= ${spring.application.name}:${spring.appl
 eureka.instance.nonSecurePortEnabled=false
 eureka.instance.securePortEnabled=true
 
+test.properties=test
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
