--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -6,6 +6,7 @@ server.port = 8888
 #spring.cloud.config.server.git.uri=https://github.com/shivanikanojia/My-Config-Server-Demo
  
  spring.cloud.config.server.git.uri=https://github.com/shivanikanojia/Config-Server
+ spring.cloud.config.server.git.search-paths=src/main/resources/configs
 #Disable security of the Management endpoint
 management.security.enabled=false
 
