--- a/src/main/resources/configs/application-development.properties
+++ b/src/main/resources/configs/application-development.properties
@@ -12,16 +12,16 @@ eureka.client.registryFetchIntervalSeconds = 5
  
 zuul.routes.Order-Service.path=/Order-Service/**
 zuul.routes.Order-Service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.Order-Service.execution.isolation.thread.timeoutInMilliseconds=600000
+#hystrix.command.Order-Service.execution.isolation.thread.timeoutInMilliseconds=600000
  
 zuul.routes.Trader-Service.path=/Trader-Service/**
 zuul.routes.Trader-Service.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.Trader-Service.execution.isolation.thread.timeoutInMilliseconds=600000
+#hystrix.command.Trader-Service.execution.isolation.thread.timeoutInMilliseconds=600000
  
 zuul.routes.SpringCloudDemo-EurekaServer.path=/SpringCloudDemo-EurekaServer/**
 zuul.routes.SpringCloudDemo-EurekaServer.sensitive-headers=Set-Cookie,Authorization
 zuul.routes.SpringCloudDemo-EurekaServer.url=http://localhost:8761
-hystrix.command.SpringCloudDemo-EurekaServer.execution.isolation.thread.timeoutInMilliseconds=600000
+#hystrix.command.SpringCloudDemo-EurekaServer.execution.isolation.thread.timeoutInMilliseconds=600000
 
 
 spring.cloud.config.discovery.service-id=config
